--- a/bookmark/templates/bookmark/tools.html
+++ b/bookmark/templates/bookmark/tools.html
@@ -60,47 +60,13 @@
                             alert("{% trans 'Drag bookmarklet to your bookmark toolbar to install.' %}");
                                 event.preventDefault();
                         });
-                        var browser = $.browser;
-                        if(!browser.chrome) {
-                            $('#chrome-bookmarklet-box a').removeClass('btn-primary');
-                        }
-                        var tour = {
-                          id: "lianpeng_tour",
-                          fixedElement: true,
-                          steps: [
-                            {
-                              title: "点击右侧“添加链接”按钮，收藏你在莲蓬的第一个网页",
-                                     content: "在出现的表单里，点击<span class='label label-success'>保存</span>按钮即完成。",
-                              target: ".add-bookmark-form .btn-add-bookmark",
-                              //showNextButton: false,
-                              placement: "left"
-                            },
-                            {
-                              title: "安装收藏工具",
-                              content: "在浏览网页的时候，使用收藏工具一键收藏，不用登录到莲蓬主站也可以收藏。",
-                              target: ".tool-menu a i",
-                              multipage: true,
-                              onNext: function() {
-                                  window.location = "/tools/"
-                              },
-                              nextOnTargetClick: true,
-                              showPrevButton: true,
-                              placement: "bottom"
-                            },
-                            {
-                              title: "点击上方的按钮安装收藏工具",
-                              content: "在浏览网页的时候，使用收藏工具一键收藏，不用登录到莲蓬主站也可以收藏。",
-                              target: "#chrome-bookmarklet-box a",
-                              multipage: true,
-                              onNext: function() {
-                                  window.location = "/tools/"
-                              },
-                              nextOnTargetClick: true,
-                              showPrevButton: true,
-                              placement: "bottom"
-                            }
-                          ]
-                        };
+                var browser = $.browser;
+                if(!browser.chrome) {
+                    $('#chrome-bookmarklet-box a').removeClass('btn-primary');
+                } else {
+                    $('#bookmarklet-box a').removeClass('btn-primary');
+                }
+                {% include 'bookmark/_tour.js' %}
                 if (hopscotch.getState() === "lianpeng_tour:2") {
                   hopscotch.startTour(tour);
                 }
