--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -460,8 +460,23 @@ body.bookmark-app {
         }
     }
     .sys-lists {
-        #feed .list-name .icon, #all-list .list-name .icon{
-            margin-top:0px;
+        #feed { 
+            .feed-indicator {
+                color:#2ecc71;
+                border-radius: 100%;
+                background-color: #2ecc71;
+                width:10px;
+                height:10px;
+                margin-top:4px;
+                background-image: -moz-linear-gradient(#2ecc71, #2ecc71);
+                background-image: -webkit-linear-gradient(#2ecc71, #2ecc71);
+                background-image: linear-gradient(#2ecc71, #2ecc71);
+                background-repeat: repeat-x;
+                box-shadow: inset 0 1px 0 rgba(255,255,255,0.15),0 1px 0 rgba(0,0,0,0.1),0 0 10px #2ecc71;
+            }
+            .list-name .icon, #all-list .list-name .icon{
+                margin-top:0px;
+            }
         }
     }
     hr {
