--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -610,9 +610,18 @@ hr.soften {
 
 /* avatar */
 
-.avatar {
+.avatar-wrapper img, .avatar-change label img, .avatar {
     margin-right: 10px;
     .border-radius(50%);
+}
+.avatar-change {
+    ul {
+        margin:0;
+        list-style:none;
+        li {
+            display:inline-block;
+        }
+    }
 }
 /* profile */
 #profile {
