--- a/lianpeng/templates/avatar/base.html
+++ b/lianpeng/templates/avatar/base.html
@@ -1,5 +1,11 @@
 {% extends "site_base.html" %}
+{% load i18n avatar_tags %}
 
 {% block body %}
+<div class="page-title">
+    <h1 class="avatar-wrapper">
+    {% avatar user %}
+    </h1>
+</div>
 {% block content %}{% endblock %}
 {% endblock %}
